<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, OneInGDUFS!</string>
    <string name="app_name">One in GDUFS</string>
    
    <!-- global 全局通用 -->
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="sure">确定</string>
    <string name="save">保存</string>
    <string name="submit">提交</string>
    <string name="refresh">刷新</string>
    <!-- Dashboard Button -->
        <!-- 按钮默认文字 -->
    <string name="dashboard_default">功能</string>
        <!-- 分割线默认文字 -->
    <string name="splitline_title"></string>
        <!-- 校园生活 -->
    <string name="dashboard_life">校园生活</string>
    <string name="dashboard_water">订水</string>
    <string name="dashboard_fix">报修</string>
    <string name="dashboard_card">校园卡</string>
    <string name="dashboard_gdufslife">后勤留言</string>
        <!-- 公共消息 -->
    <string name="dashboard_common">公共消息</string>
    <string name="dashboard_calendar">校历</string>
    <string name="dashboard_telephones">常用电话</string>
    <string name="dashboard_lost">失物招领</string>
        <!-- 在校学习 -->
    <string name="dashboard_study">在校学习</string>
    <string name="dashboard_syllabus">我的课表</string>
    <string name="dashboard_library">图书馆</string>
    <string name="dashboard_activity">活动讲座</string>
    <string name="dashboard_group">我的团体</string>
    
    <!-- 登录界面 login -->
    <string name="login_title">登录</string>
    <string name="login_username">账号（昵称、学号或手机）</string>
    <string name="login_password">密码</string>
    <string name="login_submit">登录</string>
    <string name="login_register">注册</string>
    <string name="login_failed">登录失败，请稍后重试</string>
    
    <!-- 注册界面 register -->
    <string name="register_title">注册账号</string>
    <string name="register_username">昵称</string>
    <string name="register_username_label">唯一的固定昵称，4~20个字符</string>
    <string name="register_username_error">只能使用a&#8211;Z、0&#8211;9及_，4~20个字符</string>
    <string name="register_password">密码</string>
    <string name="register_password_label">至少6位</string>
    <string name="register_password_error">过于简单，请尽量使用复杂组合并不少于6位</string>
    <string name="register_studentId">关联学号</string>
    <string name="register_studentId_label">你的数字广外账号，用于身份识别，会被保密</string>
    <string name="register_studentId_error">请输入一个学号</string>
    <string name="register_mygdufs_pwd">数字广外密码</string>
    <string name="register_mygdufs_pwd_label">你的数字广外密码，用于验证是否本人</string>
    <string name="register_mygdufs_pwd_error">请输入数字广外密码</string>
    <string name="register_back">返回</string>
    <string name="register_submit">注册</string>
    
    <!-- Menu 菜单 -->
    <string name="menu_login">登录</string>
    <string name="menu_register">注册</string>
    <string name="menu_logout">注销</string>
    <string name="menu_close">退出</string>
    <string name="menu_user">个人中心</string>
    <string name="menu_setting">设置</string>
    <string name="menu_about">关于</string>
    <string name="menu_helpus">反馈</string>
    
    <!-- 用户中心-个人中心 -->
    <string name="user_home_title">个人中心</string>
    <string name="user_home_info">我的资料</string>
    <string name="user_home_message">消息中心</string>
    <string name="user_home_todo">我的日程</string>
    <string name="user_home_relativeId">账号关联</string>
    
    <!-- 用户中心-我的资料 -->
    <string name="user_info_title">我的资料</string>
    <string name="user_info_email">example@example.com</string>
    <string name="user_info_email_label">你的常用邮箱</string>
    <string name="user_info_email_error">不是合法的邮箱地址</string>
    <string name="user_info_truename">真实姓名</string>
    <string name="user_info_truename_label">添加真实姓名将会让认识你的人更快地找到你</string>
    <string name="user_info_truename_error">不是合法的中文姓名</string>
    <string name="user_info_phone">手机</string>
    <string name="user_info_phone_label">将本机号码关联可使用更多功能</string>
    <string name="user_info_phone_error">必须为11位数字</string>
    <string name="user_info_cornet">短号</string>
    <string name="user_info_cornet_label"></string>
    <string name="user_info_cornet_error">小心别太长哦</string>
    <string name="user_info_qq">QQ</string>
    <string name="user_info_qq_label"></string>
    <string name="user_info_qq_error">QQ号码是少于10位的数字</string>
    <string name="user_info_cancel">返回</string>
    <string name="user_info_submit">保存</string>
    
    <!-- 用户中心-宿舍住址 -->
    <string name="user_roomaddress_title">宿舍住址</string>
    <string name="user_roomaddress_building_prompt">住几栋</string>
    <string name="user_roomaddress_building_label">请选择楼号</string>
    <string name="user_roomaddress_building_error">请选择楼号</string>
    <string name="user_roomaddress_layer_prompt">楼层</string>
    <string name="user_roomaddress_layer_label">请选择楼层</string>
    <string name="user_roomaddress_layer_error">请选择楼层</string>
    <string name="user_roomaddress_room_prompt">宿舍号</string>
    <string name="user_roomaddress_room_label">请选择宿舍号</string>
    <string name="user_roomaddress_room_error">请选择宿舍号</string>
    
    <!-- 校园生活 -->
    <string name="life_roomAddress">宿舍：</string>
    <!-- 订水 -->
    <string name="life_water_title">订水</string>
    <string name="life_water_number_label">请选择桶数</string>
    <string name="life_water_time_label">请选择送水时段</string>
    <string name="life_water_time_info">*今天已停止送水预约，你的预约将在明天生效</string>
    
    <!-- 报修 -->
    <string name="life_fix_title">宿舍报修</string>
    <string name="life_fix_content">报修内容说明</string>
    <string name="life_fix_content_label">物品名称、损坏情况等</string>
    <string name="life_fix_content_error">请填写报修内容</string>
    <string name="life_fix_time_label">请选择预约时间段</string>
    <string name="life_fix_time_error">请选择预约时间段</string>
    <string name="life_fix_phone">联系电话</string>
    <string name="life_fix_phone_label">请填写联系电话</string>
    <string name="life_fix_phone_info">已自动填入本机号码，可自行更改</string>
    <string name="life_fix_phone_error">请填写手机号码或短号</string>
        
    <!-- 校园卡 -->
    <string name="life_card_title">我的校园卡</string>
    <string name="life_card_cardId">卡号</string>
    <string name="life_card_balance">余额（元）</string>
    <string name="life_card_lasttime">最后一次消费时间</string>
    <string name="life_card_lastspend">最后一次消费金额（元）</string>
    <string name="life_card_lastposition">最后一次消费地点</string>
    
    <!-- 后勤留言 -->
    <string name="life_gdufslife">后勤留言</string>
    <string name="life_gdufslife_title">标题</string>
    <string name="life_gdufslife_title_label">留言的标题</string>
    <string name="life_gdufslife_title_error">标题不能为空</string>
    <string name="life_gdufslife_content">留言内容</string>
    <string name="life_gdufslife_content_label">意见建议或问题反映。请注明时间、地点、经过。</string>
    <string name="life_gdufslife_content_error">请填写更详细的内容</string>
    <string name="life_gdufslife_email">邮箱</string>
    <string name="life_gdufslife_email_label">收到回复时将会发送通知邮件到此地址</string>
    <string name="life_gdufslife_email_error">不是有效的邮箱地址</string>
    <string name="life_gdufslife_campus">校区</string>
    <string name="life_gdufslife_campus_label">请选择你所在的校区</string>
    <string name="life_gdufslife_campus_error">请选择你所在的校区</string>
    <string name="life_gdufslife_campus_prompt">请选择校区</string>
    <string name="life_gdufslife_types">区域</string>
    <string name="life_gdufslife_types_label">请选择留言内容所属区域类型</string>
    <string name="life_gdufslife_types_error">请选择留言内容所属区域类型</string>
    <string name="life_gdufslife_types_prompt">请选择校区</string>

    <!-- 公共消息 -->
    <!-- 校历 -->
    <string name="common_calendar">校历</string>
    
    <!-- 失物招领 -->
    <string name="common_lost_pickup_picture_label">点击可为物品拍照，方便失主辨认</string>
    <string name="common_lost_pickup_tag">标签</string>
    <string name="common_lost_pickup_tag_btn">添加</string>
    <string name="common_lost_pickup_tag_label">最多可添加3个物品标签</string>
    <string name="common_lost_pickup_location">地点</string>
    <string name="common_lost_pickup_location_label">捡到该物品的地点</string>
    <string name="common_lost_pickup_details">更多描述</string>
    <string name="common_lost_pickup_details_label">非必填</string>
    <string name="common_lost_pickup_explain">*提交后，失主将会通过本软件与你联系，这不会泄露你的任何个人信息</string>
    <string name="common_lost_lost_byDatetime">时间</string>
    <string name="common_lost_lost_byTag">标签</string>
    
    <!-- 通知列表 -->
    <string name="message">消息中心</string>
    <string name="message_detail">查看消息</string>
    <!-- 发送消息 -->
    <string name="message_send">发送消息</string>
    <string name="message_send_username">用户昵称</string>
    <string name="message_send_username_label">要发送到的用户账号昵称</string>
    <string name="message_send_username_error">不是合法的昵称</string>
    <string name="message_send_title">标题</string>
    <string name="message_send_title_label">消息标题</string>
    <string name="message_send_title_error">消息标题不能为空</string>
    <string name="message_send_content">消息正文</string>
    <string name="message_send_content_label">消息正文</string>
    <string name="message_send_content_error">正文不能为空</string>
</resources>