<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include layout="@layout/actionbar" />
    
    <!-- 用户中心-在校相关表单 -->
    
    <LinearLayout
        style="@style/FormWrapper">
        
        <!-- 昵称、学号 -->
        <include layout="@layout/user_title"/>
        
        <!-- 楼号 -->
        <Spinner
            android:id="@+id/user_roomaddress_building"
            style="@style/FormItem"
            android:entries="@array/user_roomaddress_building"
            android:alwaysDrawnWithCache="true"
            android:prompt="@string/user_roomaddress_building_prompt"/>
        <TextView
            android:id="@+id/user_roomaddress_building_label"
            style="@style/FormLabel"
            android:text="@string/user_roomaddress_building_label"/>
        
        <!-- 楼层 -->
        <Spinner
            android:id="@+id/user_roomaddress_layer"
            style="@style/FormItem"
            android:entries="@array/user_roomaddress_layer"
            android:prompt="@string/user_roomaddress_layer_prompt"
            android:alwaysDrawnWithCache="true" />
        <TextView
            android:id="@+id/user_roomaddress_layer_label"
            style="@style/FormLabel"
            android:text="@string/user_roomaddress_layer_label" />
        
        <!-- 宿舍号 -->
        <Spinner
            android:id="@+id/user_roomaddress_room"
            style="@style/FormItem"
            android:entries="@array/user_roomaddress_room"
            android:prompt="@string/user_roomaddress_room_prompt"/>
        <TextView
            android:id="@+id/user_roomaddress_room_label"
            style="@style/FormLabel"
            android:text="@string/user_roomaddress_room_label"/>
        
        <LinearLayout
            style="@style/FormItem"
            android:paddingTop="8dip"
            android:orientation="horizontal">
            <Button
                android:id="@+id/user_roomaddress_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"/>
            <Button
                android:id="@+id/user_roomaddress_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>