<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include layout="@layout/actionbar" />

    <LinearLayout
        style="@style/FormWrapper"
        android:paddingTop="8dip" >

        <!-- 用户名 -->
        <EditText
            android:id="@+id/login_username"
            style="@style/FormItem"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789_"
            android:hint="@string/login_username" />

        <!-- 密码 -->
        <EditText
            android:id="@+id/login_password"
            style="@style/FormItem"
            android:hint="@string/login_password"
            android:password="true" />

        <!-- 按钮：登录、注册 -->
        <LinearLayout
            style="@style/FormItem"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/login_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login_register" />
            <Button
                android:id="@+id/login_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/login_submit" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>